fix: stretched link apartment index

--- a/boolbnb-back/resources/scss/general.scss
+++ b/boolbnb-back/resources/scss/general.scss
@@ -36,6 +36,15 @@ a {
     }
 }
 
+.noClick {
+  pointer-events: none;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+
 // .backtable {
 //     background-color: rgba(0, 0, 0, 0.15) !important;
 //     backdrop-filter: blur(2px) !important;
